# pull-request-assistance

./: .coverage  .gitleaks.toml  .memory_recording.json  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  TELEGRAM_SUMMARY_EXAMPLE.md  pr_handler.py  pyproject.toml  pytest_output.txt  test_pr_handler.py  test_telegram_improvements.py
.github/workflows/: agent-runner.yml  branch-cleaner.yml  ci-health.yml  ci.yml  code-reviewer.yml  codex-improvements.yml  conflict-resolver.yml  dependency-risk.yml  docker-build.yml  generate_docs.yml  interface-developer.yml  issue-escalation.yml  jules-tracker.yml  pr-assistant.yml  pr-sla.yml  product-manager.yml  project-creator.yml  release-watcher.yml  secret-remover.yml  security-scanner.yml  senior-developer.yml
config/: repositories.json
scripts/: README.md  generate_missing_docs.py  lint.sh
src/: agent.py  ai_client.py  github_client.py  main.py  run_agent.py  scripts.py  test_locally.py
src/agents/: __init__.py  base_agent.py  jules_manager.py  metrics.py  orchestration.py  repo_manager.py  utils.py
src/agents/branch_cleaner/: __init__.py  agent.py  instructions.md
src/agents/ci_health/: agent.py  jules-instructions.md  utils.py
src/agents/code_reviewer/: __init__.py  agent.py  instructions.md
src/agents/conflict_resolver/: __init__.py  agent.py  instructions.md
src/agents/dependency_risk/: agent.py
src/agents/intelligence_standardizer/: agent.py  instructions.md  jules-instructions.md
src/agents/interface_developer/: agent.py
src/agents/jules_tracker/: __init__.py  agent.py  instructions.md  utils.py
src/agents/pr_assistant/: agent.py  conflict_resolver.py  instructions.md  pipeline.py  telegram_summary.py  utils.py
src/agents/product_manager/: agent.py  ai_analysis.py  instructions.md  jules-instructions.md  roadmap_generator.py  utils.py
src/agents/project_creator/: agent.py  instructions.md  jules-instructions.md
src/agents/secret_remover/: agent.py  ai_analyzer.py  instructions.md  telegram_summary.py  utils.py
src/agents/security_scanner/: __init__.py  agent.py  instructions.md  scanner.py  telegram_summary.py
src/agents/senior_developer/: agent.py  analyzers.py  burst_manager.py  (+6 more)
src/config/: repository_allowlist.py  settings.py
src/jules/: client.py
src/notifications/: telegram.py
tests/: test_agent.py  test_agent_ai_config.py  test_agents_coverage.py  test_ai_client.py  test_ai_client_coverage.py  test_ai_client_coverage_v2.py  test_ai_client_providers.py  test_ai_provider_selection.py  test_allowlist.py  test_base_agent.py  test_ci_health_agent.py  test_cli_coverage.py  test_code_reviewer.py  test_conflict_types.py  test_coverage_gaps_v4.py  test_final_coverage.py  test_final_coverage_v2.py  test_generate_missing_docs.py  test_github_client.py  test_github_client_gaps.py  test_github_client_gaps_v2.py  test_google_bot_suggestions.py  test_intelligence_standardizer_agent.py  test_interface_developer.py  test_interface_developer_extras.py  test_jules_client.py  test_jules_tracker_agent.py  test_jules_tracker_agent_coverage.py  test_juninmd_integration.py  test_main.py  test_main_coverage.py  test_metrics.py  test_misc_coverage.py  test_misc_coverage_gaps.py  test_notifications.py  test_ollama_client_robustness.py  test_orchestration.py  test_pr_assistant_agent.py  test_pr_assistant_close_pr.py  test_pr_assistant_conflict.py  (+34 more)
tests/smoke/: test_jules_smoke.py
tools/: fetch_top_repos_by_commits.py
