[project]
name = "pr-assistant"
version = "0.1.0"
description = "Automated PR assistance for juninmd"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "pygithub>=2.8.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
]

[project.scripts]
pr-assistant = "src.main:main"

[tool.uv]
package = true
