[project]
name = "pr-assistant"
version = "2.0.0"
description = "Automated development team with AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "ollama>=0.6.1",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pr-assistant = "src.scripts:pr_assistant"
code-reviewer = "src.scripts:code_reviewer"
security-scanner = "src.scripts:security_scanner"
ci-health = "src.scripts:ci_health"
pr-sla = "src.scripts:pr_sla"
jules-tracker = "src.scripts:jules_tracker"
branch-cleaner = "src.scripts:branch_cleaner"
conflict-resolver = "src.scripts:conflict_resolver"
intelligence-standardizer = "src.scripts:intelligence_standardizer"
product-manager = "src.scripts:product_manager"
interface-developer = "src.scripts:interface_developer"
senior-developer = "src.scripts:senior_developer"
secret-remover = "src.scripts:secret_remover"
project-creator = "src.scripts:project_creator"
agent-all = "src.scripts:all_agents"
run-agent = "src.run_agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "responses>=0.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (enforced by line-length setting)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
